add my own hub repo

--- a/multiclusterhub/example-multiclusterhub-cr.yaml
+++ b/multiclusterhub/example-multiclusterhub-cr.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: open-cluster-management
   annotations:
     "mch-imageRepository": "quay.io/open-cluster-management"
+    "mch-imageOverridesCM": "hq-image"
 spec:
   imagePullSecret: multiclusterhub-operator-pull-secret
   
